# python-monad-eff

./: README.md  pyproject.toml
python_monad_eff/: free.py  monad.py
tests/: test_free.py  test_monad.py
