[tool.poetry]
name = "python-monad-eff"
version = "0.1.0"
description = ""
authors = ["Catminusminus <getomya@svk.jp>"]
readme = "README.md"
packages = [{include = "python_monad_eff"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
